test/spec_vectors/simd_i64x2_arith/fail/module_9.wat
(module (func $i64x2.sub-arg-empty (result v128) (i64x2.sub)))